[package]
name = "rust_crawler"
version = "0.1.0"
edition = "2018"
authors = ["Alex Wolf <flowalex@vivaldi.net>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json", "blocking"] }
select = "0.5.0"